--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,7 @@
         },
         {
             "src": "/(.*)",
-            "dest": "/dist",
+            "dest": "/public",
             "headers": {
                 "Access-Control-Allow-Credentials": "true",
                 "Access-Control-Allow-Methods": "GET,OPTIONS,PATCH,DELETE,POST,PUT",
