--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,22 @@
 {
     "builds": [
         {
-            "src": "./dist/*.html",
+            "src": "./public/*.html",
             "use": "@vercel/static"
         },
         {
-            "src": "./dist/index.js",
+            "src": "./public/index.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/",
-            "dest": "/dist/welcome.html"
+            "dest": "/public/welcome.html"
         },
         {
             "src": "/(.*)",
-            "dest": "/dist",
+            "dest": "/public",
             "headers": {
                 "Access-Control-Allow-Credentials": "true",
                 "Access-Control-Allow-Methods": "GET,OPTIONS,PATCH,DELETE,POST,PUT",
